Styling Filter-by section to make the text-article icon visible. Fixes the issue #55.

--- a/pari/static/css/base.less
+++ b/pari/static/css/base.less
@@ -351,7 +351,7 @@ a.pari-link {
     display: inline-block;
     margin: 12px 0;
 
-    width: 238px;
+    width: 315px;
     height: 38px;
     overflow: hidden;
     float: left;
